--- a/app/stylesheets/ie7.css
+++ b/app/stylesheets/ie7.css
@@ -1,3 +1,3 @@
 .registration1 .right #redbox {
-   margin-left: 300px;
+   margin-left: -150px;
 }
